--- a/roles/wrt-core/handlers/main.yml
+++ b/roles/wrt-core/handlers/main.yml
@@ -1,3 +1,10 @@
 ---
 # handlers for ivansible.wrt_core
+
+- name: restart wrt service ssh
+  openwrt_init2:
+    name: S40sshd
+    state: restarted
+  tags: skip_ansible_lint
+  become: true
 ...
