--- a/roles/wrt-core/tasks/main.yml
+++ b/roles/wrt-core/tasks/main.yml
@@ -1,6 +1,9 @@
 ---
-- name: become root and install role
+- name: become root and setup entware
   import_tasks: root.yml
   become: true
-  tags: role_all
+  tags: wrt_core_all
+
+- name: run postponed handlers now
+  meta: flush_handlers
 ...
