--- a/roles/wrt-openvpn/handlers/main.yml
+++ b/roles/wrt-openvpn/handlers/main.yml
@@ -1,3 +1,10 @@
 ---
 # handlers for ivansible.wrt_openvpn
+
+- name: restart wrt service openvpn
+  openwrt_init2:
+    name: S20openvpn
+    state: restarted
+  tags: skip_ansible_lint
+  become: true
 ...
