--- a/roles/wrt-openvpn/meta/main.yml
+++ b/roles/wrt-openvpn/meta/main.yml
@@ -10,14 +10,15 @@ galaxy_info:
   min_ansible_version: 2.5
 
   platforms:
-    - name: Ubuntu
+    - name: GenericLinux
       versions:
-        - xenial
-        - bionic
+        - any
 
   galaxy_tags:
-    - linux
-    - ansible
+    - keenetic
+    - entware
+    - openvpn
+    - vpn
 
   github_branch: master
 ...
