--- a/roles/wrt-ss/tasks/main.yml
+++ b/roles/wrt-ss/tasks/main.yml
@@ -1,6 +1,10 @@
 ---
-- name: become root and install role
+- name: become root and install shadowsocks
   import_tasks: root.yml
   become: true
-  tags: role_all
+  when: wrt_ss_enable |bool
+  tags: wrt_ss_all
+
+- name: run postponed handlers now
+  meta: flush_handlers
 ...
