--- a/roles/wrt-wireguard/tasks/main.yml
+++ b/roles/wrt-wireguard/tasks/main.yml
@@ -1,6 +1,33 @@
 ---
-- name: become root and install role
+- name: become root and setup wireguard
   import_tasks: root.yml
   become: true
-  tags: role_all
+  when: wrt_wg_nets |default([])
+  tags:
+    - wrt_wg_all
+    - wrt_wireguard_all
+
+- name: create wireguard helper script for netfilter
+  include_role:
+    name: ivansible.wrt_net
+    tasks_from: netfilter.yml
+    apply:
+      become: true
+      tags:
+        - wrt_wg_netfilter
+        - wrt_wg_all
+        - wrt_wireguard_all
+  vars:
+    hooks:
+      - "{{ wrt_wg_iface }}.open"
+  tags:
+    - wrt_wg_netfilter
+    - wrt_wg_all
+    - wrt_wireguard_all
+
+- name: run postponed handlers now
+  meta: flush_handlers
+  tags:
+    - wrt_wg_all
+    - wrt_wireguard_all
 ...
