--- a/roles/wrt-sshtun/handlers/main.yml
+++ b/roles/wrt-sshtun/handlers/main.yml
@@ -1,3 +1,10 @@
 ---
 # handlers for ivansible.wrt_sshtun
+
+- name: restart wrt service sshtun
+  openwrt_init2:
+    name: "{{ wrt_sshtun_initd }}"
+    state: restarted
+  tags: skip_ansible_lint
+  become: true
 ...
