--- a/roles/wrt-privoxy/handlers/main.yml
+++ b/roles/wrt-privoxy/handlers/main.yml
@@ -1,3 +1,10 @@
 ---
 # handlers for ivansible.wrt_privoxy
+
+- name: restart wrt service privoxy
+  openwrt_init2:
+    name: S24privoxy
+    state: restarted
+  tags: skip_ansible_lint
+  become: true
 ...
