--- a/roles/wrt-privoxy/tasks/main.yml
+++ b/roles/wrt-privoxy/tasks/main.yml
@@ -1,6 +1,15 @@
 ---
-- name: become root and install role
+- name: install privoxy service on entware as root
   import_tasks: root.yml
+  vars:
+    http_addr: "{{ wrt_privoxy_listen_addr }}"
+    http_port: "{{ wrt_privoxy_listen_port }}"
+    socks_port: "{{ wrt_privoxy_socks_port }}"
   become: true
-  tags: role_all
+  when: wrt_privoxy_enable |bool
+  tags: wrt_privoxy_all
+
+- name: run postponed handlers now
+  meta: flush_handlers
+  tags: wrt_privoxy_all
 ...
