wrt-sshtun: helper scripts required bash (via shebang)

--- a/roles/wrt-sshtun/templates/ssh.config
+++ b/roles/wrt-sshtun/templates/ssh.config
@@ -36,5 +36,5 @@ Host sshtun-{{ ssh_alias }}
   Tunnel yes
   TunnelDevice {{ local_tun |int }}:{{ remote_tun |int }}
   PermitLocalCommand yes
-  LocalCommand sudo sh /opt/usr/sbin/sshtun-up.sh {{ ssh_alias }}
-  RemoteCommand sudo sh {{ wrt_sshtun_command_path }} up
+  LocalCommand sudo /opt/usr/sbin/sshtun-up.sh {{ ssh_alias }}
+  RemoteCommand sudo {{ wrt_sshtun_command_path }} up
