--- a/roles/wrt-wireguard/templates/wireguard.conf
+++ b/roles/wrt-wireguard/templates/wireguard.conf
@@ -8,7 +8,7 @@ ListenPort = {{ port }}
 MTU = {{ mtu }}
 {% endif %}
 {% if metric is not none %}
-PostUp = /opt/usr/sbin/wg-setmetric {{ iface }} {{ metric |int }}
+PostUp = /opt/usr/sbin/wg-setmetric {{ dev }} {{ metric |int }}
 {% endif %}
 {% for peer in peers %}
 
