wrt-wireguard: mimic client config file from role lin_wireguard

--- a/roles/wrt-wireguard/templates/wireguard.conf
+++ b/roles/wrt-wireguard/templates/wireguard.conf
@@ -1,6 +1,7 @@
+## wireguard {{ peers.0.name |default('peer') if peers |default([],true) else 'peer' }}.conf
 [Interface]
-Address = {{ addr if addr is string else addr |join(', ') }}
 PrivateKey = {{ key }}
+Address = {{ addr if addr is string else addr |join(', ') }}
 {% if port |int %}
 ListenPort = {{ port }}
 {% endif %}
