wrt-wireguard: simplify jinja string/list flattening

--- a/roles/wrt-wireguard/templates/wireguard.conf
+++ b/roles/wrt-wireguard/templates/wireguard.conf
@@ -1,7 +1,7 @@
 ## wireguard {{ peers.0.name |default('peer') if peers |default([],true) else 'peer' }}.conf
 [Interface]
 PrivateKey = {{ key }}
-Address = {{ addr if addr is string else addr |join(', ') }}
+Address = {{ [addr] |flatten |join(', ') }}
 {% if port |int %}
 ListenPort = {{ port }}
 {% endif %}
