--- a/roles/wrt-wireguard/templates/wireguard.conf
+++ b/roles/wrt-wireguard/templates/wireguard.conf
@@ -1,4 +1,4 @@
-## wireguard {{ peers.0.name |default('peer') if peers |default([],true) else 'peer' }}.conf
+## wireguard {{ peers.0.name |d('peer') if peers |d([],true) else 'peer' }}.conf
 [Interface]
 PrivateKey = {{ key }}
 Address = {{ [addr] |flatten |join(', ') }}
@@ -13,17 +13,17 @@ PostUp = /opt/usr/sbin/wg-setmetric {{ dev }} {{ metric |int }}
 {% endif %}
 {% for peer in peers %}
 
-{% set active = peer.active |default(true) |bool %}
+{% set active = peer.active |d(true) |bool %}
 {% set comment = active |ternary('', '#') %}
-## {{ peer.name |default('peer %d' % loop.index, true) }}{{ active |ternary('', ' (disabled)') }}
+## {{ peer.name |d('peer %d' % loop.index, true) }}{{ active |ternary('', ' (disabled)') }}
 {{ comment }}[Peer]
 {{ comment }}PublicKey = {{ peer.pub }}
-{% if peer.psk |default('',true) %}
+{% if peer.psk |d('') %}
 {{ comment }}PresharedKey = {{ peer.psk }}
 {% endif %}
-{{ comment }}AllowedIPs = {{ peer.ips |default([],true) |flatten |join(', ') }}
-{% if peer.host |default('',true) %}
-{{ comment }}Endpoint = {{ peer.host }}:{{ peer.port |default(port, true) }}
+{{ comment }}AllowedIPs = {{ peer.ips |d([],true) |flatten |join(', ') }}
+{% if peer.host |d('') %}
+{{ comment }}Endpoint = {{ peer.host }}:{{ peer.port |d(port, true) }}
 {% endif %}
 {% if keepalive |int %}
 {{ comment }}PersistentKeepalive = {{ keepalive }}
