--- a/roles/wrt-core/defaults/main.yml
+++ b/roles/wrt-core/defaults/main.yml
@@ -48,6 +48,8 @@ wrt_core_packages:
   - openssh-client
   - openssh-server
   - openssh-keygen
+  - openssh-sftp-client
+  - openssh-sftp-server
   - sudo
   - opkg
   ## core programs
